# Aether

./: .gitignore  Cargo.toml  README.md  docs.md
.github/workflows/: ci.yml
benchmarks/: README.md  checksums.txt  factorial.ae  fib_bench.ae  fib_bench.c  fib_bench.py  fib_bench.rs  inc_loop.ae  inc_loop_verify.ae  loop_sum.ae  print_concat.ae  results.txt  sum_squares.ae  sum_squares.c  sum_squares.py  sum_squares.rs
benchmarks/c/: factorial.c  inc_loop.c  inc_loop_verify.c  loop_sum.c  print_concat.c
benchmarks/python/: factorial.py  inc_loop.py  inc_loop_verify.py  loop_sum.py  print_concat.py
benchmarks/rust/: factorial.rs  inc_loop.rs  inc_loop_verify.rs  loop_sum.rs  print_concat.rs
crates/aether-backend-aarch64/: Cargo.toml
crates/aether-backend-x86_64/: Cargo.toml
crates/aether-codegen/: Cargo.toml
crates/aether-frontend/: Cargo.toml
crates/aetherc/: Cargo.toml
crates/aetherc/src/: main.rs
docs/: BUILD.md  benchmarks.md  language.md  standards.md
examples/: arrays.ae  benchmark.ae  bitwise.ae  calls.ae  expr_print.ae  factorial.ae  fibonacci.ae  file_io.ae  float_return.ae  greet.ae  hanoi.ae  hello.ae  inheritance.ae  locals_mutation.ae  loop_sum.ae  multi_arg.ae  nested_ifs.ae  nested_structs.ae  oo_point.ae  print_casts.ae  println.ae  recursion_while.ae  runtime_ifelse.ae  stdin_echo.ae  stdin_to_int.ae  threads.ae  threads_map_reduce.ae  threads_simple.ae  tick.ae  vec_demo.ae
examples/challenges/: absolute_value.ae  ackermann.ae  binomial.ae  catalan.ae  gcd.ae  (+24 more)
scripts/: assemble_link.sh  bench.sh  build_linux.sh  cross_build.sh
(+109 files in other folders)
